feat: extend eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["airbnb-base"],
+  "extends": ["airbnb-base", "plugin:typescript-sort-keys/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "typescript-sort-keys"],
   "rules": {
     "import/extensions": [
       "error",
@@ -26,6 +26,7 @@
     "no-unused-vars": "off",
     "import/prefer-default-export": "off",
     "operator-linebreak": "off",
-    "object-curly-newline": "off"
+    "object-curly-newline": "off",
+    "implicit-arrow-linebreak": "off"
   }
 }
