--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-typescript-sort-keys": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "serverless-plugin-log-subscription": "^2.0.1",
