--- a/.github/workflows/deployment-database.yml
+++ b/.github/workflows/deployment-database.yml
@@ -13,4 +13,7 @@ jobs:
         with:
           node-version: '14.18.1'
       - run: yarn install
-      - run: yarn typeorm -f src/ormconfig.ts migration:run
+      - name: migrations
+        run: yarn typeorm -f src/ormconfig.ts migration:run
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
