--- a/.github/workflows/deployment-database.yml
+++ b/.github/workflows/deployment-database.yml
@@ -9,12 +9,16 @@ jobs:
   migration:
     name: Run migrations
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
 
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: '14.18.1'
+          node-version: ${{ matrix.node-version }}
       - run: yarn install
       - name: migrations
         run: yarn typeorm -f src/ormconfig.ts migration:run
