--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-typescript-sort-keys": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
+    "prettier": "^2.5.0",
     "serverless-plugin-log-subscription": "^2.0.1",
     "serverless-plugin-typescript": "^2.1.0",
     "ts-loader": "^9.2.6",
