--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/aws-lambda": "^8.10.87",
     "aws-sdk": "^2.1028.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
+    "jest": "^27.4.7",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.38"
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@serverless/typescript": "^2.65.0",
     "@types/aws-sdk": "^2.7.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
