--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "prepare": "husky install",
     "clean": "rimraf .serverless",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "dependencies": {
     "@sailplane/logger": "^3.0.0",
@@ -20,12 +21,17 @@
     "typeorm": "^0.2.38"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@serverless/typescript": "^2.65.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
+    "babel-jest": "^27.4.6",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -37,6 +43,7 @@
     "prettier": "^2.5.0",
     "serverless-plugin-log-subscription": "^2.0.1",
     "serverless-plugin-typescript": "^2.1.0",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
