--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf .serverless",
     "lint": "eslint . --ext .ts",
     "test": "jest --setupFiles dotenv/config",
-    "test:ci": "jest --setupFiles dotenv/config --ci --reporters='default' --reporters='./github-actions-reporter'"
+    "test:ci": "jest --setupFiles dotenv/config --ci"
   },
   "dependencies": {
     "@sailplane/logger": "^3.0.0",
