--- a/.github/workflows/deployment-serverless.yml
+++ b/.github/workflows/deployment-serverless.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Serverless Framework
-        run: npm install -g serverless
+        run: npm install -g serverless@2.67.0
       - run: yarn install
       - name: migrations
         run: yarn typeorm -f src/ormconfig.ts migration:run
