--- a/.github/workflows/deployment-serverless.yml
+++ b/.github/workflows/deployment-serverless.yml
@@ -21,9 +21,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install Serverless Framework
         run: npm install -g serverless@2.67.0
-      - run: yarn install
+      - run: npm install
       - name: migrations
-        run: yarn typeorm -f src/ormconfig.ts migration:run
+        run: npm typeorm -f src/ormconfig.ts migration:run
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
       - name: Serverless AWS authentication
