--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install
+      - run: npm install
       - name: Run tests
-        run: yarn test:ci    
+        run: npm test:ci    
         env:
           BASIC_TOKEN_EU: ${{ secrets.BASIC_TOKEN_EU }}
           BASIC_TOKEN_EL: ${{ secrets.BASIC_TOKEN_EL }}
