--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - name: Run tests
-        run: npm test:ci    
+        run: npm run test:ci    
         env:
           BASIC_TOKEN_EU: ${{ secrets.BASIC_TOKEN_EU }}
           BASIC_TOKEN_EL: ${{ secrets.BASIC_TOKEN_EL }}
