--- a/package.json
+++ b/package.json
@@ -11,44 +11,45 @@
     "test:ci": "jest --setupFiles dotenv/config --ci"
   },
   "dependencies": {
-    "@sailplane/logger": "^3.0.0",
+    "@sailplane/logger": "^4.2.0",
     "@types/aws-lambda": "^8.10.87",
     "aws-sdk": "^2.1028.0",
-    "axios": "^0.24.0",
+    "axios": "^1.4.0",
     "date-fns": "^2.28.0",
-    "jest": "^27.4.7",
+    "jest": "^29.6.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.45"
+    "typeorm": "^0.3.17",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@babel/plugin-proposal-decorators": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@serverless/typescript": "^2.65.0",
+    "@serverless/typescript": "^3.30.1",
     "@types/aws-sdk": "^2.7.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.10",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "babel-jest": "^27.4.6",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.5",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
-    "prettier": "^2.5.0",
-    "serverless": "^3.21.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0",
+    "serverless": "^3.33.0",
     "serverless-plugin-log-subscription": "^2.0.1",
     "serverless-plugin-typescript": "^2.1.0",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6"
   }
 }
