--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"sourceMap": true,
 		"target": "es6",
 		"outDir": "dist",
-		"rootDir": "./src",
+		"rootDir": "./",
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
 		"esModuleInterop": true,
