--- a/serverless.yml
+++ b/serverless.yml
@@ -13,12 +13,12 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs14.x
+  runtime: nodejs18.x
   lambdaHashingVersion: 20201221
   region: us-east-2
   stage: ${opt:stage, 'dev'}
   deploymentBucket:
-    name: mcbrokenio-paulbtw-dev
+    name: mcbrokenio-paulbtw-${opt:stage, 'dev'}
   tags:
     project: mcbrokenio
     owner: paulbtw
@@ -42,6 +42,7 @@ provider:
         - arn:aws:s3:::*
   httpApi:
       cors: true
+  architecture: arm64
 
 custom:
   mcdInfo:
@@ -102,6 +103,14 @@ functions:
           method: GET
           path: /
   cleanupDatabase:
+    handler: src/functions/cleanupDatabase/handler.main
+    environment:
+      DATABASE_URL: ${self:custom.mcdInfo.databaseUrl}
+    memorySize: 128
+    timeout: 300
+    events:
+      - schedule: cron(0 0 * * ? *)
+  cleanupDatabase2:
     handler: src/functions/cleanupDatabase/handler.main
     environment:
       DATABASE_URL: ${self:custom.mcdInfo.databaseUrl}
