--- a/package.json
+++ b/package.json
@@ -29,38 +29,53 @@
   "devDependencies": {
     "@aws-sdk/types": "3.378.0",
     "@jest/transform": "29.6.2",
-    "@nrwl/tao": "16.5.5",
-    "@nx/devkit": "16.5.5",
-    "@nx/eslint-plugin": "16.5.5",
-    "@nx/jest": "16.5.5",
-    "@nx/js": "16.5.5",
-    "@nx/linter": "16.5.5",
-    "@nx/node": "16.5.5",
-    "@nx/plugin": "16.5.5",
-    "@nx/workspace": "16.5.5",
+    "@nrwl/tao": "16.7.0",
+    "@nx/devkit": "16.7.0",
+    "@nx/eslint-plugin": "16.7.0",
+    "@nx/jest": "16.7.0",
+    "@nx/js": "16.7.0",
+    "@nx/linter": "16.7.0",
+    "@nx/next": "16.7.0",
+    "@nx/node": "16.7.0",
+    "@nx/plugin": "16.7.0",
+    "@nx/react": "16.7.0",
+    "@nx/workspace": "16.7.0",
     "@swc-node/register": "~1.4.2",
     "@swc/cli": "0.1.62",
     "@swc/core": "1.3.51",
+    "@testing-library/react": "14.0.0",
     "@types/aws-lambda": "8.10.119",
     "@types/jest": "29.5.3",
     "@types/node": "18.17.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "@types/serverless": "3.12.13",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "autoprefixer": "10.4.13",
+    "babel-jest": "^29.4.1",
     "esbuild": "^0.17.19",
     "eslint": "8.46.0",
+    "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.9.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
     "jest": "29.6.2",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "29.6.2",
     "lint-staged": "13.2.3",
-    "nx-cloud": "16.1.1",
+    "nx-cloud": "16.3.0",
+    "postcss": "8.4.21",
     "prettier": "2.8.8",
     "prisma": "^5.0.0",
     "serverless": "3.33.0",
     "serverless-esbuild": "1.46.0",
     "serverless-jest-plugin": "0.4.0",
     "serverless-offline": "12.0.4",
+    "tailwindcss": "3.2.7",
     "ts-jest": "29.1.1",
     "ts-loader": "9.4.4",
     "ts-node": "10.9.1",
@@ -80,11 +95,16 @@
   },
   "packageManager": "yarn@3.6.1",
   "dependencies": {
-    "@prisma/client": "5.0.0",
+    "@prisma/client": "5.1.1",
     "@sailplane/logger": "^4.2.0",
     "@swc/helpers": "0.5.0",
     "axios": "^1.4.0",
+    "mapbox-gl": "^2.15.0",
+    "next": "13.4.1",
     "p-queue": "^7.3.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-map-gl": "^7.1.3",
     "tslib": "2.6.1"
   }
 }
