--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "mapbox-gl": "^2.15.0",
