--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:analyze": "ANALYZE=true yarn build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.5.3",
     "@floating-ui/react": "^0.25.4",
+    "@next/bundle-analyzer": "^13.5.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
