feat: add analytics and turf

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@floating-ui/dom": "^1.5.3",
     "@floating-ui/react": "^0.25.4",
     "@next/bundle-analyzer": "^13.5.2",
+    "@turf/turf": "^6.5.0",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
