--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.4.19",
     "mapbox-gl": "^2.15.0",
     "next": "13.4.19",
+    "next-plausible": "^3.12.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
