--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mcserverless",
   "version": "1.0.0",
+  "engines": {
+    "node": "^20"
+  },
   "scripts": {
     "mcall:local": "sls invoke local -c serverless.mcall.ts",
     "mcall:deploy": "sls deploy -c serverless.mcall.ts",
@@ -15,7 +18,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.409.0",
-    "@prisma/client": "5.2.0",
+    "@prisma/client": "5.22.0",
     "@sailplane/logger": "^4.2.0",
     "clsx": "^2.0.0",
     "p-queue": "^7.4.1",
@@ -34,7 +37,7 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.3",
-    "serverless": "^3.34.0",
+    "serverless": "^3",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-esbuild": "^1.46.0",
     "ts-node": "^10.4.0",
