--- a/packages/mclogik/package.json
+++ b/packages/mclogik/package.json
@@ -4,7 +4,11 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "check-types": "tsc --noEmit",
+    "test": "vitest run --coverage --passWithNoTests",
+    "test:watch": "vitest --passWithNoTests",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.962.0",
@@ -16,6 +20,7 @@
   "devDependencies": {
     "@mcbroken/eslint-config": "workspace:*",
     "@mcbroken/typescript-config": "workspace:*",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.32.0",
     "typescript": "^5.9.2",
     "vitest": "^4.0.16"
