--- a/packages/mclogik/tsconfig.json
+++ b/packages/mclogik/tsconfig.json
@@ -4,9 +4,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "./dist",
-    "paths": {},
-    "moduleResolution": "Bundler",
-    "module": "ESNext",
+    "module": "preserve",
+    "moduleResolution": "bundler",
     "lib": ["ES2022"]
   },
   "include": [
