--- a/turbo.json
+++ b/turbo.json
@@ -4,8 +4,8 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "env": ["DATABASE_URL", "BASIC_TOKEN_EU", "KEY", "BASIC_TOKEN_AP", "BASIC_TOKEN_US", "BASIC_TOKEN_EL", "EXPORT_BUCKET"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"],
+      "env": ["DATABASE_URL", "BASIC_TOKEN_EU", "KEY", "BASIC_TOKEN_AP", "BASIC_TOKEN_US", "BASIC_TOKEN_EL", "EXPORT_BUCKET", "MCD_DEVICEID", "API_KEY_AP"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -16,12 +16,17 @@
     "check-types": {
       "dependsOn": ["^check-types"]
     },
+    "test": {
+      "dependsOn": ["^test"],
+      "outputs": ["coverage/**"]
+    },
     "dev": {
       "persistent": true,
       "cache": false
     },
     "db:generate": {
-      "cache": false
+      "cache": false,
+      "env": ["DATABASE_URL"]
     },
     "db:migrate": {
       "cache": false,
@@ -39,12 +44,14 @@
       "cache": false
     },
     "deploy:staging": {
+      "env": ["AWS_PROFILE"],
       "dependsOn": [
         "package"
       ],
       "cache": false
     },
     "deploy:production": {
+      "env": ["AWS_PROFILE"],
       "dependsOn": [
         "package"
       ],
