--- a/apps/mcau/tsconfig.json
+++ b/apps/mcau/tsconfig.json
@@ -2,11 +2,15 @@
   "extends": "@mcbroken/typescript-config/base.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@functions/*": ["src/functions/*"]
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": ["node_modules"]
 }
 
