--- a/apps/mcall/package.json
+++ b/apps/mcall/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@mcbroken/eslint-config": "workspace:*",
+    "@mcbroken/serverless-config": "workspace:*",
     "@mcbroken/typescript-config": "workspace:*",
     "@serverless/typescript": "^3.38.0",
     "typescript": "^5.9.2"
