--- a/package.json
+++ b/package.json
@@ -18,15 +18,10 @@
     "@mcbroken/eslint-config": "workspace:*",
     "@mcbroken/typescript-config": "workspace:*",
     "@types/aws-lambda": "^8.10.159",
-    "@types/node": "^14.14.25",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@types/node": "22",
     "esbuild": "0.25.0",
-    "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^39.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.3",
+    "prettier": "^3.7.4",
     "serverless": "3.40.0",
     "serverless-esbuild": "1.54.6",
     "serverless-offline": "14.4.0",
@@ -44,8 +39,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "pnpm@10.25.0",
-  "dependencies": {
-    "prettier": "^3.7.4"
-  }
+  "packageManager": "pnpm@10.25.0"
 }
