chore: add unified deploy and local invoke scripts
Add root-level scripts for deploying all regions and invoking Lambda
handlers locally. The invoke script auto-detects the native Prisma
engine binary, removing the need for manual -e overrides.

- Add pnpm deploy/deploy:mcall/deploy:mcus/deploy:mcau scripts
- Add pnpm invoke wrapper with app validation
- Add postgres-data and jean.json to .gitignore

--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "check-api": "ts-node --transpile-only scripts/check-api-health.ts",
     "check-api:us": "ts-node --transpile-only scripts/check-api-health.ts us",
     "check-api:europe": "ts-node --transpile-only scripts/check-api-health.ts europe",
-    "check-api:australia": "ts-node --transpile-only scripts/check-api-health.ts australia"
+    "check-api:australia": "ts-node --transpile-only scripts/check-api-health.ts australia",
+    "invoke": "./scripts/invoke-local.sh",
+    "deploy": "turbo run deploy:production",
+    "deploy:mcall": "turbo run deploy:production --filter=@mcbroken/mcall",
+    "deploy:mcus": "turbo run deploy:production --filter=@mcbroken/mcus",
+    "deploy:mcau": "turbo run deploy:production --filter=@mcbroken/mcau"
   },
   "devDependencies": {
     "@mcbroken/eslint-config": "workspace:*",
